2005-04-06 Vangelis Rokas <vrokas AT users.sourceforge.net>

        * device/include/pic16/usart.h: added, missing in previous commit,
        * device/include/pic16/adc.h: fixed typo,
        * device/lib/pic16/libc/utils/cvtdec.S: added missing in previous
        commit,
        * device/lib/pic16/libc/stdlib/g_ftoa.S: modified to include
        <p18fxxx.inc>
        * device/lib/pic16/libc/stdio/streams.c: leave stdin, stdout
        uninitialized because a bug appears with gplink
        * device/lib/pic16/{some makefiles}: moved $(CSTD) from CFLAGS to
        COMPILE_FLAGS and added CPPFLAGS with -nostdinc because sdcpp
        complains for unrecognised option

2005-04-05 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_popCopyReg): made copying work for extended
	  structs as well (using memcpy)
	* (genFunction): fixed comparison, used pCodeOpLabel to reduce warning
	  on ISRs (GOTO has no label)
	* src/pic16/device.h: added OF_OPTIMIZE_DF
	* src/pic16/main.c: added compiler switch --optimize-df to enable the
	  new data flow analysis/optimization
	* src/pic16/pcode.c: added (prototypes for and implementation of)
	  dataflow analysis functions, fixed pCodeInstructions' inCond and
	  outCond values, made RCALL a branch instruction
	* (pic16_unlinkpCode): keep C line if possible
	* (pic16_pCodeUnlink): removed cast on left side of assignment, have
	  C line moved if possible
	* (pic16_getRegFrompCodeOp): NEW, improved version of...
	* (pic16_getRegFromInstruction,pic16_getRegFromInstruction2): changed
	  to use new pic16_getRegFrompCodeOp (works for more SFRs)
	* (pic16_BuildFlow): fixed skip instructions with label (did not start
	  new flow)
	* (pic16_getJumptabpCode): NEW, needed in...
	* (LinkFlow): fixed handling of jumptables, calls and conditional
	  branches
	* (pic16_InsertCommentAfter): NEW
	* (pic16_pCodeReplace): made verbose and flow preserving
	* (AnalyzeFlow): added call to data flow analysis